@@ -12,6 +12,7 @@ FIXES
 * Fix for CVE-2018-13441, CVE-2018-13458, CVE-2018-13457 null pointer dereference (Trevor McDonald)
 * Fixed syntax error in file: default-init.in (#558) (Christian Zettel)
 * Reset current notification number and state flags when the host recovers, reset all service variables when they recover fixes (#557) (Scott Wilkerson)
+* Fixed wrong counting of service status totals when showing servicegroup details (#548) (Christian Zettel, Bryan Heden)
 
 4.4.1 - 2018-06-25
 ------------------
